Removed old gitignore files

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="jumbotron">
     <img
-      src="{% static 'portfolio/IMG_0154.JPG' %}"
+      src="{% static 'portfolio/IMG_0154.jpg' %}"
       class="img-fluid"
       alt="Responsive image"
       id="main-img"
