Local settings changed

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -9,7 +9,7 @@
     />
     <h1 class="display-4">Let's Get To Building</h1>
     <p class="lead">
-      Hi, my name is Anthony and I love building websites from the ground up.
+      Hi, my name is Anthony and I am a full stack web developer.
     </p>
     <hr class="my-4" />
   </div>
