--- a/portfolio/static/portfolio/base.css
+++ b/portfolio/static/portfolio/base.css
@@ -14,10 +14,22 @@ body {
   background-color: #edf2f4 !important;
 }
 
-.card-body {
+.card {
+  border: none;
+}
+
+/* .card-body {
   background-color: #edf2f4 !important;
 }
 
 .main {
   background-color: #edf2f4 !important;
+}
+
+#cardbg {
+  background-color: #edf2f4 !important;
+}
+
+.card {
+  border: none;
 }
